@@ -8,11 +8,17 @@ import org.mockito.Mock;
 import org.springframework.test.context.junit4.SpringJUnit4ClassRunner;
 import uk.gov.hmcts.ecm.common.model.ccd.CaseData;
 import uk.gov.hmcts.ecm.common.model.ccd.SubmitEvent;
+
 import uk.gov.hmcts.ecm.common.model.ccd.items.DateListedTypeItem;
 import uk.gov.hmcts.ecm.common.model.ccd.items.HearingTypeItem;
 import uk.gov.hmcts.ecm.common.model.ccd.items.JurCodesTypeItem;
 import uk.gov.hmcts.ecm.common.model.ccd.types.DateListedType;
 import uk.gov.hmcts.ecm.common.model.ccd.types.HearingType;
+
+import uk.gov.hmcts.ecm.common.model.ccd.items.JudgementTypeItem;
+import uk.gov.hmcts.ecm.common.model.ccd.items.JurCodesTypeItem;
+import uk.gov.hmcts.ecm.common.model.ccd.types.JudgementType;
+
 import uk.gov.hmcts.ecm.common.model.ccd.types.JurCodesType;
 import uk.gov.hmcts.ecm.common.model.multiples.MultipleDetails;
 import uk.gov.hmcts.ethos.replacement.docmosis.helpers.MultipleUtil;
@@ -23,15 +29,19 @@ import java.util.Collections;
 import java.util.List;
 
 import static org.junit.Assert.assertEquals;
+import static org.mockito.ArgumentMatchers.any;
+
 import static org.mockito.ArgumentMatchers.anyList;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.ArgumentMatchers.isA;
 import static org.mockito.Mockito.doCallRealMethod;
 import static org.mockito.Mockito.when;
+
 import static uk.gov.hmcts.ecm.common.model.helper.Constants.CLOSED_STATE;
 import static uk.gov.hmcts.ecm.common.model.helper.Constants.CLOSING_HEARD_CASE_WITH_NO_JUDGE_ERROR;
 import static uk.gov.hmcts.ecm.common.model.helper.Constants.CLOSING_LISTED_CASE_ERROR;
 import static uk.gov.hmcts.ecm.common.model.helper.Constants.JURISDICTION_OUTCOME_NOT_ALLOCATED_ERROR_MESSAGE;
+import static uk.gov.hmcts.ecm.common.model.helper.Constants.MISSING_JUDGEMENT_JURISDICTION_MESSAGE;
 import static uk.gov.hmcts.ecm.common.model.helper.Constants.MISSING_JURISDICTION_OUTCOME_ERROR_MESSAGE;
 
 @RunWith(SpringJUnit4ClassRunner.class)
@@ -76,14 +86,19 @@ public class MultipleCloseEventValidationServiceTest {
     }
 
     @Test
-    public void multipleCloseEventValidationJurisdictionsCollectionReturnsErrors() {
+    public void multipleCloseEventValidationReturnsErrors() {
         var jurCodesTypeItem = new JurCodesTypeItem();
         jurCodesTypeItem.setId("TEST");
         jurCodesTypeItem.setValue(new JurCodesType());
 
+        var judgmentTypeItem = new JudgementTypeItem();
+        judgmentTypeItem.setId("TEST");
+        judgmentTypeItem.setValue(new JudgementType());
+
         CaseData caseData = new CaseData();
         caseData.setEthosCaseReference("245004/2020");
-        caseData.setJurCodesCollection(new ArrayList<>(Collections.singletonList(jurCodesTypeItem)));
+        caseData.setJurCodesCollection(List.of(jurCodesTypeItem));
+        caseData.setJudgementCollection(List.of(judgmentTypeItem));
 
         var submitEvent = getSubmitEventForCase(caseData);
 
@@ -102,14 +117,20 @@ public class MultipleCloseEventValidationServiceTest {
                 multipleDetails.getCaseData().getMultipleSource())
         ).thenReturn(new ArrayList<>(Collections.singletonList(submitEvent)));
 
+        doCallRealMethod().when(eventValidationService).validateCaseBeforeCloseEvent(isA(CaseData.class),
+                eq(false), eq(true), anyList());
+
         doCallRealMethod().when(eventValidationService).validateJurisdictionOutcome(isA(CaseData.class),
-                eq(false), eq(true), eq(new ArrayList<>()));
+                eq(false), eq(true), anyList());
+
+        doCallRealMethod().when(eventValidationService).validateJudgementsHasJurisdiction(isA(CaseData.class),
+                eq(true), anyList());
 
         List<String> errors = multipleCloseEventValidationService.validateCasesBeforeCloseEvent(
                 userToken,
                 multipleDetails);
 
-        assertEquals(1, errors.size());
+        assertEquals(2, errors.size());
         assertEquals("245004/2020 - " + MISSING_JURISDICTION_OUTCOME_ERROR_MESSAGE, errors.get(0));
     }
 
@@ -117,7 +138,7 @@ public class MultipleCloseEventValidationServiceTest {
     public void shouldReturnJurisdictionsOutcomeNotAllocatedErrors() {
         var caseData = getCaseData();
         caseData.getJurCodesCollection().clear();
-
+  
         var jurCodesTypeItem = new JurCodesTypeItem();
         var jurCodeType = new JurCodesType();
         jurCodeType.setJudgmentOutcome("Not allocated");
@@ -126,13 +147,9 @@ public class MultipleCloseEventValidationServiceTest {
         jurCodesTypeItem.setValue(jurCodeType);
 
         caseData.setEthosCaseReference("245004/2020");
-        caseData.setJurCodesCollection(new ArrayList<>(Collections.singletonList(jurCodesTypeItem)));
-
-        caseData.getJurCodesCollection().get(0).getValue().setJudgmentOutcome("Not allocated");
-
+        caseData.setJurCodesCollection(List.of(jurCodesTypeItem));
+ 
         var submitEvent = getSubmitEventForCase(caseData);
-
-       // multipleDetails.getCaseData().setLeadCase(null);
 
         when(multipleHelperService.getEthosCaseRefCollection(
                 userToken,
@@ -148,8 +165,14 @@ public class MultipleCloseEventValidationServiceTest {
 
         ).thenReturn(new ArrayList<>(Collections.singletonList(submitEvent)));
 
+        doCallRealMethod().when(eventValidationService).validateCaseBeforeCloseEvent(isA(CaseData.class),
+                eq(false), eq(true), anyList());
+
         doCallRealMethod().when(eventValidationService).validateJurisdictionOutcome(isA(CaseData.class),
                 eq(false), eq(true), anyList());
+
+        doCallRealMethod().when(eventValidationService).validateJudgementsHasJurisdiction(isA(CaseData.class),
+                eq(true), anyList());
 
         List<String> errors = multipleCloseEventValidationService.validateCasesBeforeCloseEvent(
                 userToken,
